# OpenGLRenderingEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.6EB5011A563974C1.idx
header/: glfw_input.h  glfw_window.h  mesh.h  model.h  scene.h  shader.h
header/Renderer/: Texture2D.h  cube.h  index_buffer.h  mesh.h  model.h  shader.h  vertex_array.h  vertex_buffer.h
header/cyCodeBase-master/: cyTriMesh.h
res/: bugatti2.mtl
res/shaders/: bad_reflection.glsl  default.glsl  light.glsl  red.glsl
src/: cube.h  glfw_window.cpp  main.cpp  shader.cpp
src/Renderer/: Texture2D.cpp  index_buffer.cpp  shader.cpp  vertex_array.cpp  vertex_buffer.cpp
